hydran-89: Add GET resource with parameters for delegation
